# cpp-package-g3dlite

./: CMakeLists.txt  CMakePresets.json  README  g3dliteConfig.cmake.in  license.txt
src/g3dlite/: CMakeLists.txt  g3dlite-config.cmake.in
